<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Local Raster Data</string>
    <string name="measure">Measure Tool</string>
    <string name="basemap_url">http://server.arcgisonline.com/arcgis/rest/services/ESRI_StreetMap_World_2D/MapServer</string>
    <string name="default_raster_layer">ArcGIS/data/rasters/CADRG_bilinear/hawaii.sqlite</string>
    <string name="filebrowser_text">Current folder: \n/THis/is/a/long/path/to/test/if/this/will/span/multiple/lines</string>
    <string name="button_select">Select</string>
    <string name="button_up">Up</string>
    <string name="menu_dir_up">Up to parent directory</string>
    <string name="menu_dir_select">Select current directory</string>
    <string name="menu_layer">Add a layer</string>
    <string name="menu_layer_raster">Raster layer</string>
    <string name="menu_renderer">Set renderer</string>
    <string name="menu_renderer_blend">Blend renderer</string>
    <string name="menu_renderer_hillshade">Hillshade renderer</string>
    <string name="menu_renderer_rgb">RGB renderer</string>
    <string name="menu_renderer_stretch">Stretch renderer</string>
    <string name="menu_raster_base_layer">basemap layer</string>
    <string name="menu_raster_operational_layer">operational layer</string>
    <string name="menu_raster_elevation_source">elevation source</string>
    <string name="menu_raster_base_elevation">basemap and elevation</string>
    <string name="menu_raster_operational_elevation">operational and elevation</string>
    <string name="select_stretch_type">Select stretch type:</string>
    <string name="radio_stretchtype_none">NONE</string>
    <string name="radio_stretchtype_minmax">Min Max</string>
    <string name="radio_stretchtype_stddev">Standard Devidation</string>
    <string name="radio_stretchtype_histogram">Histogram Equalization</string>
    <string name="radio_stretchtype_pecentclip">Pecent Clip</string>
    <string name="rgbrenderer_parameters_ok">OK</string>
    <string name="rgbrenderer_parameters_cancel">Cancel</string>

    <string name="set_hillshade_renderer_parameters">Input parameters for the renderer:</string>
    <string name="set_hillshade_altitude">Altitude: </string>
    <string name="set_hillshade_azimuth">Azimuth: </string>
    <string name="set_hillshade_zfactor">Z factor: </string>
    <string name="set_hillshade_slopetype">Slope type: </string>
    <string name="set_hillshade_pixelsizefactor">Pixel size factor: </string>
    <string name="set_hillshade_pixelsizepower">Pixel size power: </string>
    <string name="set_blend_gamma">Gamma:</string>
    <string name="parameter_double_hint">0.00</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>