<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_layer_raster"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/menu_layer_raster"/>
    <item
        android:id="@+id/menu_renderer"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always"
        android:title="@string/menu_renderer">
        <menu>
            <item
                android:id="@+id/menu_renderer_blend"
                android:title="@string/menu_renderer_blend"/>
            <item
                android:id="@+id/menu_renderer_hillshade"
                android:title="@string/menu_renderer_hillshade"/>
            <item
                android:id="@+id/menu_renderer_rgb"
                android:title="@string/menu_renderer_rgb"/>
            <item
                android:id="@+id/menu_renderer_stretch"
                android:title="@string/menu_renderer_stretch"/>
        </menu>
    </item>
    <item
        android:id="@+id/test"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="always"
        android:title="test" />
    <item
        android:id="@+id/gps"
        android:icon="@android:drawable/ic_dialog_email"
        app:showAsAction="always"
        android:title="gps" />
    <item
        android:id="@+id/menu_dir_up"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom"
        android:title="@string/menu_dir_up"
        android:visible="false"/>
    <item
        android:id="@+id/menu_dir_select"
        android:icon="@drawable/folder"
        app:showAsAction="ifRoom"
        android:title="@string/menu_dir_select"
        android:visible="false"/>

</menu>